[project]
name = "eips-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.7.1",
    "fastembed>=0.7.1",
    "lancedb>=0.24.0",
    "markdown>=3.8.2",
    "mcp[cli]>=1.10.1",
    "pandas>=2.3.0",
    "unstructured>=0.18.2",
]
